fixed remove shift dialog displayed incorrect name and shift text

--- a/src/App.css
+++ b/src/App.css
@@ -145,5 +145,4 @@ table {
     margin:0px;
     margin-bottom: .5em;
     padding:.3em;
-    text-align: center;
   }
